fix(public): fix overflow on checkbox-panel and radio-button-panel

--- a/src/angular-core/styles/includes/_checkbox.scss
+++ b/src/angular-core/styles/includes/_checkbox.scss
@@ -278,7 +278,7 @@ $checkboxRadioButtonPanelImageHeight: 40;
     background-color: $sbbColorMilk;
     font-size: toPx($sizeFontDefault);
     width: 100%;
-    height: toPx($checkboxRadioButtonPanelHeight);
+    min-height: toPx($checkboxRadioButtonPanelHeight);
     padding: toPx($checkboxRadioButtonPanelPadding);
     border-radius: toPx($checkboxRadioButtonPanelBorderRadius);
     display: flex;
@@ -308,13 +308,13 @@ $checkboxRadioButtonPanelImageHeight: 40;
     }
 
     &-has-subtitle {
-      height: toPx($checkboxRadioButtonPanelHeightWithSubtitle);
+      min-height: toPx($checkboxRadioButtonPanelHeightWithSubtitle);
       @include mq($from: desktop4k) {
-        height: toPx($checkboxRadioButtonPanelHeightWithSubtitle * $scalingFactor4k);
+        min-height: toPx($checkboxRadioButtonPanelHeightWithSubtitle * $scalingFactor4k);
       }
 
       @include mq($from: desktop5k) {
-        height: toPx($checkboxRadioButtonPanelHeightWithSubtitle * $scalingFactor5k);
+        min-height: toPx($checkboxRadioButtonPanelHeightWithSubtitle * $scalingFactor5k);
       }
     }
 
